cssnode: Fix style updating when the CSS node ID changes

Since 4ebb5781eaf332da3f8ce5ffb5ecc8668a56f118 ID has a specific value,
while it used to be the same as NAME.  Thus, explicitly list ID as a
radical change just like NAME.

https://bugzilla.gnome.org/show_bug.cgi?id=757397